Terraform/AWS-test/EKS_Cluster_resources/terraform/02-EKS-Deployment/2-vpc.tf
# This file creates the VPC for the EKS cluster
resource "aws_vpc" "eks-main" {
  cidr_block = var.cidr-vpc

  tags = {
    Name        = "eks-main"
    Description = "EKS VPC"
    Terraform   = "true"
  }
}
